 - Editor no longer errors on empty translations when compiling the game.
 - Editor now exports values of the string type Custom Properties to translations.
 - Editor no longer prevents exporting string arguments from Get/SetTextProperty calls to TRS file.
 - Editor now cleanups spritefile on game load, identifying any data not referenced by the project
   and marking it for deletion.
 - Fixed few editor panes were not opening correct help topics in F1.

Compiler:
 - Support unicode character literals.
 - Support hexadecimal number literals (e.g. "0xABCDEF").
 - Removed 500-characters line limit.

Script API:
 - Expanded `on_key_press` callback, now supports two parameters: key code and key modifier flags.
 - In the new key handling mode `on_key_press` is called for each actual key press;
   e.g. combinations like Ctrl+Z will result in two `on_key_press` calls, one with eKeyCtrlLeft and
   second with eKeyZ; added support for "NEW_KEYINPUT_API" macro in scripts.
 - Implemented new `on_text_input(int ch)` callback which is called when the engine receives
   a printable character. This callback is essential for handling unicode chars in script.
 - Similarily, expanded `dialog_options_key_press` with the third `mod` argument, and implemented
   `dialog_options_text_input` callback for receiving unicode chars during the custom dialog
   options state.
 - Added eKey constants for Shift, Control and Alt keys.
 - Added eKeyMod enum for key modifiers constants.
 - String.AppendChar(), ReplaceChar() functions and String.Chars[] property are now working with
   the unicode characters.
 - String.Format("%c") specifier will now be able to print unicode characters.
 - Extended Button.Animate() to have blocking style, direction and starting frame parameters.
 - Added Game.ChangeSpeechVox() and Game.SpeechVoxFilename, support switching the voice-over pack.
 - Hotspot.Name and Object.Name may now be set in script.
 - Added Object.ManualScaling and Object.Scaling.