@@ -1,6 +1,6 @@
 {
-    "version": "3.6.0.23",
+    "version": "3.6.0.24",
     "versionFriendly": "3.6.0",
-    "versionSp": "Beta3",
+    "versionSp": "Beta4",
     "appID": "a4d6de0f-18b0-4aae-9338-86a333563b98"
 }
